feat: Implement P0 & P1 UX improvements (ChatGPT feedback)
P0 - Mock Content Removal (CRITICAL):
- Add mockContentGuard utility to strip mock content from reports
- Add watermark to PDFs when MOCK_MODE=true (TEST/INTERNAL USE ONLY)
- Strip mock content from API responses before caching/returning
- Add build-time validation script to prevent MOCK_MODE=true in production
- Update PDF generator to clean all report content before generation

P1 - Confirmation Flow Streamlining:
- Remove 3-second delay on payment success page
- Redirect immediately to preview page for smoother UX
- Remove redundant 'unlock' messaging

P1 - Report Table of Contents:
- Add sticky TOC component on report pages (desktop only)
- Smooth scroll navigation with active section highlighting
- Add section IDs to all report sections for navigation
- TOC includes: Executive Summary, Sections, Key Insights, Download PDF

Files modified:
- src/lib/ai-astrology/mockContentGuard.ts (NEW)
- src/lib/ai-astrology/pdfGenerator.ts
- src/app/api/ai-astrology/generate-report/route.ts
- scripts/validate-production.mjs (NEW)
- package.json (build script updated)
- src/app/ai-astrology/payment/success/page.tsx
- src/components/ai-astrology/ReportTableOfContents.tsx (NEW)
- src/app/ai-astrology/preview/page.tsx

Documentation:
- CHATGPT_UX_REVIEW_ANALYSIS.md
- P0_P1_IMPLEMENTATION_SUMMARY.md

--- a/astrosetu/package.json
+++ b/astrosetu/package.json
@@ -7,7 +7,7 @@
     "type-check:skip": "echo 'Skipping type check'",
     "verify": "npm run type-check && npm run build",
     "dev": "next dev -p 3001",
-    "build": "node scripts/generate-build-meta.mjs && next build",
+    "build": "node scripts/validate-production.mjs && node scripts/generate-build-meta.mjs && next build",
     "build:safe": "npm run type-check:skip || true && npm run build",
     "start": "next start -p 3001",
     "lint": "next lint",
