Implement ChatGPT feedback: MVP hardening and documentation
P1.1: Update .env.example with MVP-critical flags
- Added NEXT_PUBLIC_BUNDLES_ENABLED=false
- Added BYPASS_PAYMENT_FOR_TEST_USERS=false
- Added ALLOW_PROD_TEST_BYPASS=false
- Added AI_ASTROLOGY_DEMO_MODE=false
- Added VERCEL_ENV=production (commented, informational)

P1.2: Create OPS_PRODUCTION_FLAGS.md documentation
- Single source of truth for production flags
- Documents what each flag does, safe defaults, warnings
- Includes verification checklist and change approval process

P1.3: Bundle freeze already short-circuits immediately
- Verified bundle/page.tsx returns early before selection UI
- No changes needed (already optimal)

P2.1: Extract fallback logic into applyDeterministicFallback_NO_API helper
- Created deterministicFallback.ts with explicit NO-API guarantee
- Added MVP GUARANTEE comment banner
- Prevents accidental reintroduction of API calls in fallback

P2.2: Add structured MVP outcome log
- Replaced MVP_SAFETY_LOG with MVP_OUTCOME_LOG
- Added outcome field: completed | completed_with_fallback | failed
- Standardized log format for easier auditing

Files Changed:
- .env.example: Added MVP-critical flags
- docs/OPS_PRODUCTION_FLAGS.md: New documentation file
- src/lib/ai-astrology/deterministicFallback.ts: New helper function
- src/app/api/ai-astrology/generate-report/route.ts: Use helper, enhanced logging

Verification:
- Type check: ✅ Passing
- Linter: ✅ No errors

Status: Ready for production deployment

--- a/astrosetu/.env.example
+++ b/astrosetu/.env.example
@@ -1,2 +1,30 @@
 NEXT_PUBLIC_APP_NAME=AstroSetu
 NEXT_PUBLIC_TAGLINE=Bridging humans with cosmic guidance
+
+# MVP-Critical Production Flags (DO NOT CHANGE IN PRODUCTION WITHOUT EXPLICIT APPROVAL)
+# These flags control payment bypass, bundle availability, and test mode behavior
+# Default values shown are SAFE for production
+
+# Bundle Reports Feature Flag
+# Set to "true" only if bundles are fully tested and meet MVP bundle-level payment guarantee
+# RECOMMENDED: Keep "false" in production until bundle redesign is complete
+NEXT_PUBLIC_BUNDLES_ENABLED=false
+
+# Payment Bypass for Test Users (LOCAL/PREVIEW ONLY)
+# NEVER set to "true" in production unless explicitly testing payment flows
+# This bypasses Stripe for test users - only safe in local/preview environments
+BYPASS_PAYMENT_FOR_TEST_USERS=false
+
+# Production Test Session Bypass (EXPLICIT OPT-IN REQUIRED)
+# Allows prodtest_ sessions to bypass Stripe in production
+# WARNING: Only enable if you explicitly need production test sessions
+# NEVER enable without understanding the security implications
+ALLOW_PROD_TEST_BYPASS=false
+
+# Demo Mode (LOCAL/PREVIEW ONLY)
+# Enables demo/test mode for development
+# NEVER set to "true" in production
+AI_ASTROLOGY_DEMO_MODE=false
+
+# Vercel Environment (informational - set automatically by Vercel)
+# VERCEL_ENV=production
